<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_friends_add_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.FriendsAddActivity">

    <!-- 10116336 KAIZER NUGRAHA IF-8 8/14/19 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp" >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/et_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nim"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/et_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/et_kelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kelas"
                android:maxLines="1"
                android:inputType="textCapSentences"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/et_telepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telepon"
                android:maxLines="1"
                android:inputType="number"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_email"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/et_sosmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sosial_media"
                android:maxLines="1"
                android:inputType="textCapSentences"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:textColor="@color/bg_screen3"/>

    </LinearLayout>
</ScrollView>
