<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <!-- 10116336 KAIZER NUGRAHA IF-8 8/14/19 -->

    <android.support.v7.widget.CardView
        android:id="@+id/cv_item_friends"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/friends" />

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/tv_item_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/img_item_photo"
                android:text="@string/nim"
                android:textColor="@color/dot_light_screen1" />

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/tv_item_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_item_nim"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/img_item_photo"
                android:text="@string/nama"
                android:textColor="@color/dot_light_screen1" />

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/tv_item_kelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_nama"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/img_item_photo"
                android:text="@string/kelas"
                android:textColor="@color/dot_light_screen1" />

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/tv_item_telepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_kelas"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/img_item_photo"
                android:text="@string/telepon"
                android:textColor="@color/dot_light_screen1" />

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/tv_item_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_telepon"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/img_item_photo"
                android:text="@string/email_text"
                android:textColor="@color/dot_light_screen1" />

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/tv_item_sosmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_email"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/img_item_photo"
                android:text="Sosmed"
                android:textColor="@color/dot_light_screen1" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>