<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ContactFragment">

    <!-- 10116336 KAIZER NUGRAHA IF-8 8/14/19 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/kontak"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile1"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <TextView
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/kaizer_nugraha"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <ImageView
                android:id="@+id/telp"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/telp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/telp"
                android:text="@string/telp"
                android:textColor="@android:color/darker_gray"
                android:background="@color/white"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/email"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/gmail1"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_gmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/email"
                android:text="@string/email"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/darker_gray"
                android:background="@color/white"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/wa"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/whatsapp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_wa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/wa"
                android:text="@string/wa"
                android:textColor="@android:color/darker_gray"
                android:background="@color/white"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/youtube"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/youtube"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_youtube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/youtube"
                android:text="@string/twitter"
                android:textColor="@android:color/darker_gray"
                android:background="@color/white"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/ig"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/instagram"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_ig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ig"
                android:text="@string/ig"
                android:textColor="@android:color/darker_gray"
                android:background="@color/white"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/fb"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/facebook"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/fb"
                android:text="@string/kaizer_nugraha"
                android:textColor="@android:color/darker_gray"
                android:background="@color/white"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>